--- a/problem/sacs - 副本/sacs.yaml
+++ b/problem/sacs - 副本/sacs.yaml
@@ -1,53 +1,70 @@
-# -----------------------------------------------------------------
-# problem/sacs/sacs.yaml
-# -----------------------------------------------------------------
-
-# The description is now a detailed, zero-tolerance prompt for the LLM.
+# problem/sacs/sacs.yaml (V2 - Unlocked I-Beam Optimization)
 description: |
-  ### INSTRUCTION ###
-  You are a SACS (Structural Analysis Computer System) expert model generation bot. Your ONLY task is to take existing SACS code blocks and generate a new set of code blocks with modified design parameters (e.g., Outer Diameter, Wall Thickness), while maintaining the **ABSOLUTELY STRICT FIXED-WIDTH FORMAT**. Failure to maintain the format will cause the entire analysis to fail.
+  You are an expert SACS (Structural Analysis Computer System) optimization bot. Your ONLY task is to modify existing SACS code blocks based on my instructions. You MUST generate a complete, new set of SACS code lines.
 
-  ### FIXED-WIDTH FORMAT RULES (CRITICAL) ###
-  The SACS `GRUP` line format is column-based. Every character's position is meaningful.
+  # --- START: NEW CONTEXTUAL INFORMATION ---
+  **Your Goal: Mixed-Mode Structural Optimization**
+  You are modifying the geometric properties of a jacket structure to achieve three competing objectives.
+  1.  **Minimize `weight`**: A lighter structure is cheaper.
+  2.  **Minimize `axial_uc_max`**: Maximum axial stress ratio. Key for leg/brace stability.
+  3.  **Minimize `bending_uc_max`**: Maximum bending stress ratio. Key for resisting environmental loads.
 
-  - **Column 1-4**: The keyword 'GRUP'.
-  - **Column 6-10**: The group name (e.g., 'LG1').
-  - **Column 19-24**: Outer Diameter (OD). This is a 6-character field, right-aligned, with 3 decimal places. Example: ' 42.000'.
-  - **Column 26-30**: Wall Thickness (WT). This is a 5-character field, right-aligned, with 3 decimal places. Example: ' 1.375'.
-  - **All other columns**: You MUST replicate the characters from the original line in their EXACT positions.
+  **CRITICAL CONSTRAINT: The `max_uc` (overall stress ratio) MUST NOT exceed 1.0.** An efficient design has a `max_uc` approaching 0.9-0.95.
 
-  To visualize the columns:
-  '       10        20        30        40        50        60        70        80
-  '....|....|....|....|....|....|....|....|....|....|....|....|....|....|....|....|
-  GRUP LG1         42.000 1.375 29.0011.6050.00 1    1.001.00     0.500N490.005.00
+  **The Variables You Control and Their Effects:**
+  You have TWO types of members you can change:
 
-  ### EXAMPLES (LEARN FROM THESE) ###
+  1.  **Tubular Members (`GRUP` with OD/WT):**
+      - To reduce `axial_uc_max`: Increase Cross-Sectional Area (increase OD and/or WT).
+      - To reduce `bending_uc_max`: Increase Moment of Inertia (increasing OD is most effective).
+      - Trade-off: Both actions increase `weight`.
 
-  **Case 1: Correct Formatting**
-  - **Original Line**: ```GRUP LG2         42.000 1.375 29.0011.6050.00 1    1.001.00     0.500N490.006.15```
-  - **Instruction**: Change OD to 38.5 and WT to 1.25.
-  - **Correct Output Line**: ```GRUP LG2         38.500 1.250 29.0011.6050.00 1    1.001.00     0.500N490.006.15```
+  2.  **I-Beam Members (`GRUP` with Section Name, e.g., W24X162):**
+      - **YOU CAN NOW CHANGE THESE!** You can select a different I-beam section from a predefined library.
+      - **How to Change:** Replace the section name (e.g., `W24X162`) with another from the W24 series. A smaller number after the "X" means a lighter beam (e.g., `W24X94` is lighter than `W24X162`), which reduces `weight` but also reduces strength.
+      - **Strategy:** If `bending_uc_max` for the platform is high, choose a heavier I-beam (e.g., `W24X176`). If all UCs are very low and you need to save weight, choose a lighter I-beam (e.g., `W24X117`).
 
-  **Case 2: Incorrect Formatting (Alignment/Padding Error)**
-  - **Original Line**: ```GRUP LG4         42.000 1.375 29.0011.6050.00 1    1.001.00     0.500N490.00```
-  - **Instruction**: Change OD to 40.0 and WT to 1.125.
-  - **WRONG Output**: ```GRUP LG4         40.0 1.125 29.0011.6050.00 1    1.001.00     0.500N490.00``` (Reason: OD and WT are not padded with spaces to fill their 6 and 5-character fields respectively).
-  - **Correct Output Line**: ```GRUP LG4         40.000 1.125 29.0011.6050.00 1    1.001.00     0.500N490.00```
+  **If all UC values are very low (e.g., below 0.5), you have significant room to reduce `weight` by making members lighter (reducing OD/WT, or choosing a lighter I-beam section).**
+  # --- END: NEW CONTEXTUAL INFORMATION ---
 
-  **The final output must be a single, valid JSON object enclosed in <candidate> tags.**
+  **CRITICAL DIRECTIVE: The SACS Fixed-Width Format**
+  - **GRUP Card Format (Tubular):**
+    - `Col 1-4`:   'GRUP'
+    - `Col 6-10`:  Group Name (5 chars, left-aligned)
+    - `Col 19-24`: Outer Diameter (OD) (6 chars, right-aligned, 3 decimal places. Example: ' 42.000')
+    - `Col 26-30`: Wall Thickness (WT) (5 chars, right-aligned, 3 decimal places. Example: ' 1.375')
+  
+  - **GRUP Card Format (I-Beam):**
+    - Preserve the format exactly, only changing the section name (e.g., `W24X162`). Example: `GRUP W01 W24X162              29.0111.2035.97 1    1.001.00     0.500 490.00`
 
-# Example output remains the same, as it defines the required JSON structure.
-example_output: 'Each output must be a single, valid JSON object enclosed in <candidate> tags. The JSON should contain a single key "new_code_blocks", where the value is a dictionary mapping a block identifier to its new, complete SACS code line. Example: <candidate>{"new_code_blocks": {"GRUP_LG1": "GRUP LG1         40.000 1.250 29.0011.6050.00 1    1.001.00     0.500N490.005.00","PGRUP_P01": "PGRUP P01 0.3500I29.000 0.25036.000                                     490.0000"}}</candidate>'
+  - **PGRUP Card Format:**
+    - `Col 1-5`:   'PGRUP'
+    - `Col 7-9`:   Group Name (3 chars, left-aligned)
+    - `Col 12-17`: Plate Thickness (6 chars, left-aligned, 4 decimal places. Example: '0.3750')
 
-# Instructions for genetic operations, now more explicit about the process.
-mutation_instruction: 'You are an engineer performing a mutation. Propose a small, logical modification to ONE of the provided code blocks to improve the design (e.g., slightly increase thickness to reduce stress). First, briefly explain your reasoning (e.g., "UC is high, so increasing WT for GRUP_LG1 a little"). Then, generate the complete JSON output with the single changed line, ensuring the fixed-width format is perfect.'
+# ... (The rest of the file: objective definitions, output format, instructions, etc. are correct and can remain as they are)
 
-crossover_instruction: 'You are an engineer performing a crossover. Combine the best attributes from the two parent candidates. For example, take a strong leg section from Candidate A and a lightweight plate group from Candidate B. First, briefly explain your reasoning for the combination. Then, generate a new, complete set of code blocks as a single JSON object that represents this hybrid design. Ensure all lines maintain the perfect fixed-width format.'
+weight: 'Total structural weight in tonnes. Lower is better.'
+axial_uc_max: 'Maximum axial stress ratio across all members. Lower is better.'
+bending_uc_max: 'Maximum bending stress ratio (from either yy or zz axis) across all members. Lower is better.'
+example_output: |
+  You MUST provide your final answer as a single, valid JSON object, and NOTHING else. Enclose the entire JSON object within `<candidate>` and `</candidate>` tags. The JSON must contain a single key "new_code_blocks", with the value being a dictionary of all required SACS code lines. 
+  
+  Example of a valid output:
+  <candidate>
+  {
+      "new_code_blocks": {
+          "GRUP_LG1": "GRUP LG1         42.000 1.500 29.0011.6050.00 1    1.001.00     0.500N490.005.00",
+          "GRUP_W01": "GRUP W01 W24X146              29.0111.2035.97 1    1.001.00     0.500 490.00",
+          "PGRUP_P01": "PGRUP P01 0.3750I29.000 0.25036.000                                     490.0000"
+      }
+  }
+  </candidate>
+mutation_instruction: |
+  **INSTRUCTION: Perform a MUTATION.**
+  1. Apply random modifications independently to each parent’s parameters without mixing them, you can largely change the values if appropriate.
+crossover_instruction: |
+  **INSTRUCTION: Perform a CROSSOVER.**
+  1.  Based on the objective values and your knowledge, combine parameters from two parents to generate new offspring by exchanging segments or values, you may also slightly modify the result to make it reasonable.
+other_requirements: 'Do not write any explanation, reasoning, or conversation. Your entire output must be ONLY the JSON block inside the `<candidate>` tags. Maintain the fixed-width format perfectly.'
 
-# A final reminder about the most critical constraint.
-other_requirements: The generated SACS code lines must be complete, syntactically correct, and PRESERVE THE STRICT FIXED-WIDTH FORMAT. Column alignment is the most critical requirement.
-
-# --- Objective Descriptions ---
-weight: 'Total structural volume (in m^3), which is directly proportional to weight. Lower is better. This is mainly affected by the cross-sectional dimensions (diameter and thickness) of GRUP and PGRUP cards.'
-uc: 'Max Unity Check (UC), a measure of structural stress. It must be below 1.0. Lower is better. Increasing member thickness or diameter generally reduces UC.'
-fatigue: 'Minimum fatigue life (in years) of the structure. A critical measure for long-term safety. Higher is better. This is sensitive to stress concentrations and dimensions in cyclically loaded areas.'
