--- a/problem/sacs/sacs.yaml
+++ b/problem/sacs/sacs.yaml
@@ -1,86 +1,75 @@
-# problem/sacs/sacs.yaml
-
-# ----------------- INSTRUCTION BLOCK (The Core Prompt) -----------------
+# problem/sacs/sacs.yaml (V3 - With Aggressive Strategy Directive)
 description: |
   You are an expert SACS (Structural Analysis Computer System) optimization bot. Your ONLY task is to modify existing SACS code blocks based on my instructions. You MUST generate a complete, new set of SACS code lines.
 
-  # --- START: NEW CONTEXTUAL INFORMATION ---
-  **Your Goal: Engineering Trade-offs**
-  You are modifying the geometric properties of structural members (jacket legs, braces, etc.) to achieve three competing objectives:
+  # --- START: CRITICAL STRATEGY UPDATE ---
+  **MISSION OVERVIEW: The optimization has stalled. Your previous conservative strategy was incorrect. Your new mission is to be aggressive.**
+
+  *   **THE OLD, FAILED STRATEGY:** You incorrectly learned that a very low UC (e.g., < 0.2) is good. **THIS IS WRONG.** It leads to overly heavy and inefficient structures.
+
+  *   **THE NEW, CORRECT DIRECTIVE:** The ultimate goal is to find the **LIGHTEST** possible structure whose `max_uc` (the maximum of `axial_uc_max` and `bending_uc_max`) is **JUST BELOW 1.0**. The most valuable solutions are found near this boundary.
+
+  *   **CONCRETE EXAMPLE OF SUPERIORITY:** A candidate with `weight: 40` and `max_uc: 0.95` is **VASTLY SUPERIOR** to a candidate with `weight: 50` and `max_uc: 0.2`. You must prioritize weight reduction, even if it significantly increases the UC, as long as `max_uc` remains below 1.0.
+
+  **YOUR ACTION PLAN:**
+  1.  **AGGRESSIVELY EXPLORE HIGH UC VALUES:** Actively generate candidates that push `max_uc` into the **0.8 to 0.98 range**.
+  2.  **MAKE BOLD CHANGES:** Do not be afraid to make large reductions to member sizes (OD, WT, and especially choosing lighter I-Beams like W24X76 or W24X62) to drastically cut weight. The only real limit is the `max_uc <= 1.0` constraint.
+  # --- END: CRITICAL STRATEGY UPDATE ---
+
+  # --- Supporting Context & Variable Effects ---
+  You are modifying the geometric properties of a jacket structure to achieve three competing objectives:
   1.  **Minimize `weight`**: A lighter structure is cheaper.
-  2.  **Minimize `uc` (Unity Check)**: A measure of stress. It must stay below 1.0 for safety.
-  3.  **Maximize `fatigue` life**: The structure must resist damage over time.
+  2.  **Minimize `axial_uc_max`**: Maximum axial stress ratio.
+  3.  **Minimize `bending_uc_max`**: Maximum bending stress ratio.
 
-  **The Variables You Control and Their Effects:**
-  For `GRUP` cards, you are primarily changing two values:
-  *   **Outer Diameter (OD):**
-      *   *Increasing OD*: Increases stiffness and strength (reduces `uc`), generally improves `fatigue` life, but significantly increases `weight`.
-      *   *Decreasing OD*: Reduces `weight`, but lowers strength (increases `uc`) and can reduce `fatigue` life.
-  *   **Wall Thickness (WT):**
-      *   *Increasing WT*: Increases local strength (reduces `uc`), improves `fatigue` life, and increases `weight`.
-      *   *Decreasing WT*: Reduces `weight`, but also reduces strength (increases `uc`) and `fatigue` life.
+  You have TWO types of members you can change:
 
-  **Your core challenge is the trade-off:** You need to find a smart balance. Don't just make members huge to pass checks; find the most efficient design that satisfies all constraints. For example, if `uc` is very low (e.g., 0.5), you have room to reduce OD or WT to save `weight`. If `fatigue` life is the limiting factor, you might need to increase thickness even if the stress (`uc`) is acceptable.
-  # --- END: NEW CONTEXTUAL INFORMATION ---
+  1.  **Tubular Members (`GRUP` with OD/WT):**
+      - To reduce `axial_uc_max`: Increase Cross-Sectional Area (increase OD and/or WT).
+      - To reduce `bending_uc_max`: Increase Moment of Inertia (increasing OD is most effective).
+      - Trade-off: Both actions increase `weight`, which you must fight against.
 
-  **CRITICAL DIRECTIVE: The SACS Fixed-Width Format**
-  This is not optional. Every character position is meaningful. Adhere to the following column definitions STRICTLY. Any deviation will cause the entire simulation to fail.
+  2.  **I-Beam Members (`GRUP` with Section Name, e.g., W24X162):**
+      - You can select a different I-beam section. A smaller number after the "X" means a lighter beam (e.g., `W24X94` is much lighter than `W24X162`).
+      - **Strategy:** Choose the lightest possible I-beam that keeps the `bending_uc_max` just under 1.0.
 
-  - **GRUP Card Format:**
+  # --- CRITICAL DIRECTIVE: The SACS Fixed-Width Format ---
+  # ... (The rest of this section is unchanged, as the format rules are correct) ...
+  - **GRUP Card Format (Tubular):**
     - `Col 1-4`:   'GRUP'
     - `Col 6-10`:  Group Name (5 chars, left-aligned)
     - `Col 19-24`: Outer Diameter (OD) (6 chars, right-aligned, 3 decimal places. Example: ' 42.000')
     - `Col 26-30`: Wall Thickness (WT) (5 chars, right-aligned, 3 decimal places. Example: ' 1.375')
-    - Other columns MUST be preserved EXACTLY as in the original.
+  
+  - **GRUP Card Format (I-Beam):**
+    - Preserve the format exactly, only changing the section name (e.g., `W24X162`). Example: `GRUP W01 W24X162              29.0111.2035.97 1    1.001.00     0.500 490.00`
 
   - **PGRUP Card Format:**
     - `Col 1-5`:   'PGRUP'
     - `Col 7-9`:   Group Name (3 chars, left-aligned)
     - `Col 12-17`: Plate Thickness (6 chars, left-aligned, 4 decimal places. Example: '0.3750')
-    - Other columns MUST be preserved EXACTLY as in the original.
 
-  **EXAMPLE OF PERFECT FORMATTING:**
-  Original: `GRUP LG1         42.000 1.375 29.0011.6050.00 1    1.001.00     0.500N490.005.00`
-  Task: Change OD to 38.0 and WT to 1.500.
-  Correct Output Line: `GRUP LG1         38.000 1.500 29.0011.6050.00 1    1.001.00     0.500N490.005.00`
-  (Notice the padding spaces are preserved to maintain alignment.)
-
-# ----------------- OBJECTIVE DEFINITIONS -----------------
-# (This section is now enriched by the description block above, but kept for legacy/clarity)
-weight: 'Total structural volume (m^3), proportional to weight. Lower is better.'
-uc: 'Max Unity Check (UC), a measure of stress. MUST be <= 1.0. Lower is better.'
-fatigue: 'Minimum fatigue life (years). Higher is better.'
-
-# ----------------- OUTPUT FORMAT INSTRUCTIONS -----------------
-# <--- MODIFICATION START: Added your examples to enrich the prompt --->
+# ... (The rest of your file remains exactly the same) ...
+weight: 'Total structural volume (m^3). Lower is better.'
+axial_uc_max: 'Maximum axial stress ratio across all members. Lower is better.'
+bending_uc_max: 'Maximum bending stress ratio (from either yy or zz axis) across all members. Lower is better.'
 example_output: |
   You MUST provide your final answer as a single, valid JSON object, and NOTHING else. Enclose the entire JSON object within `<candidate>` and `</candidate>` tags. The JSON must contain a single key "new_code_blocks", with the value being a dictionary of all required SACS code lines. 
   
-  Here are several examples of valid outputs based on different design philosophies.
-
-  **Example 1 (Balanced Design - from model1.txt):**
+  Example of a valid output:
   <candidate>
   {
       "new_code_blocks": {
           "GRUP_LG1": "GRUP LG1         42.000 1.500 29.0011.6050.00 1    1.001.00     0.500N490.005.00",
-          "GRUP_LG2": "GRUP LG2         42.000 1.500 29.0011.6050.00 1    1.001.00     0.500N490.006.15",
-          ...
+          "GRUP_W01": "GRUP W01 W24X146              29.0111.2035.97 1    1.001.00     0.500 490.00",
           "PGRUP_P01": "PGRUP P01 0.3750I29.000 0.25036.000                                     490.0000"
       }
   }
   </candidate>
-# <--- MODIFICATION END --->
-
-# ----------------- OPERATOR INSTRUCTIONS -----------------
-# (No changes needed here)
 mutation_instruction: |
   **INSTRUCTION: Perform a MUTATION.**
   1. Apply random modifications independently to each parent’s parameters without mixing them, you can largely change the values if appropriate.
-
 crossover_instruction: |
   **INSTRUCTION: Perform a CROSSOVER.**
   1.  Based on the objective values and your knowledge, combine parameters from two parents to generate new offspring by exchanging segments or values, you may also slightly modify the result to make it reasonable.
-
-# ----------------- OTHER REQUIREMENTS -----------------
-# (No changes needed here)
 other_requirements: 'Do not write any explanation, reasoning, or conversation. Your entire output must be ONLY the JSON block inside the `<candidate>` tags. Maintain the fixed-width format perfectly.'
